crates/syntax/tests/snapshots/tokenizer__basic-2.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(\"1 + 1\")"
---
Ok(
    [
        SpannedToken {
            span: 0..1,
            token: LiteralInt(
                "1",
            ),
        },
        SpannedToken {
            span: 2..3,
            token: OperatorAdd,
        },
        SpannedToken {
            span: 4..5,
            token: LiteralInt(
                "1",
            ),
        },
    ],
)
