crates/syntax/tests/snapshots/tokenizer__basic-3.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(\"1+ 1\")"
---
Ok(
    [
        Spanned {
            span: 0..1,
            val: LiteralInt,
        },
        Spanned {
            span: 1..2,
            val: OperatorAdd,
        },
        Spanned {
            span: 3..4,
            val: LiteralInt,
        },
    ],
)
