crates/syntax/tests/snapshots/tokenizer__lexer_assignment.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: lex(input)
---
Ok(
    [
        SpannedToken {
            span: 0..1,
            token: Normal(
                Identifier(
                    "a",
                ),
            ),
        },
        SpannedToken {
            span: 2..3,
            token: Normal(
                OperatorAssignment,
            ),
        },
        SpannedToken {
            span: 4..5,
            token: Normal(
                Identifier(
                    "b",
                ),
            ),
        },
        SpannedToken {
            span: 6..7,
            token: Normal(
                OperatorMultiply,
            ),
        },
        SpannedToken {
            span: 8..9,
            token: Normal(
                LiteralInt(
                    "2",
                ),
            ),
        },
    ],
)
