crates/syntax/tests/snapshots/tokenizer__lexer_basic addition.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: lex(input)
---
[
    SpannedToken {
        span: 0..1,
        token: Normal(
            LiteralInt(
                "1",
            ),
        ),
    },
    SpannedToken {
        span: 2..3,
        token: Normal(
            OperatorAdd,
        ),
    },
    SpannedToken {
        span: 4..5,
        token: Normal(
            LiteralInt(
                "1",
            ),
        ),
    },
]
